items spacing fix

--- a/src/assets/style/toolbar.scss
+++ b/src/assets/style/toolbar.scss
@@ -162,7 +162,7 @@ a:not(.md-button) {
   }
   & tr {
     background-color: white !important;
-    border-bottom: 20px solid rgb(244, 246, 251);
+    border-bottom: 10px solid rgb(244, 246, 251);
     border-radius: 10px !important;
   }
   & tr:hover {
